gcc/testsuite/algol68/compile/error-coercion-1.a68
# { dg-options "-fstropping=upper" }  #

BEGIN INT a;
      a := "foo" # { dg-error "cannot be coerced" } #
END
